Bug 361777 - attempting to move the system tray widget will cause it to disappear
Summary: attempting to move the system tray widget will cause it to disappear
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.6.0
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-14 20:37 UTC by CapsAdmin
Modified: 2016-06-22 16:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description CapsAdmin 2016-04-14 20:37:09 UTC
when trying to add another widget it says it's still there, maybe some infinite position?

Reproducible: Always
Comment 1 Christoph Feck 2016-06-17 23:36:20 UTC
Could you please specify which Plasma version you are using? If you are indeed using neon packages, the latest should be Plasma 5.6.5. If you are using an earlier version, please test if the issue is still persists after updating.
Comment 2 CapsAdmin 2016-06-18 07:44:17 UTC
I forgot which version I was using but now it's on:

KDE Plasma Version: 5.7.90
KDE Frameworks Version: 5.24.0

It no longer disappears but plasmashell crashes instead. (I'm not sure how to get the debug symbols and attach backtrace.)
Comment 3 David Edmundson 2016-06-20 20:07:15 UTC
Fixed in review.
You won't get debug trace in this case because of the way it was crashing.
Comment 4 David Edmundson 2016-06-21 12:12:44 UTC
Git commit 3c1eb48018d2742a91d2bc802021f97e27703a4b by David Edmundson.
Committed on 20/06/2016 at 20:07.
Pushed by davidedmundson into branch 'master'.

Don't include embedded contrainers in containmentAt(pos)

Do to so means the System Tray applet ends up being placed inside the
system tray container, which ends up in a parent loop, causing a stack
overflow every time parent() is called recursively

This happens whenever one drags a sys tray on the desktop or simply adds
a new system tray whilst running.

We also need to do a hack for Plasma/5.7 in plasma-desktop somehow in
all cases where this is used.

M  +3    -0    src/scriptengines/qml/plasmoid/containmentinterface.cpp

http://commits.kde.org/plasma-framework/3c1eb48018d2742a91d2bc802021f97e27703a4b
Comment 5 CapsAdmin 2016-06-22 16:49:18 UTC
thanks, it's working now. :)